manifests/proxy/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  namespace: homeassistant
  name: homeassistant
subsets:
- addresses:
  - ip: 10.11.12.101
  ports:
  - name: app
    port: 8123
    protocol: TCP
