manifests/proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: homeassistant
  name: homeassistant
spec:
  ports:
  - name: app
    port: 8123
    protocol: TCP
    targetPort: 8123
  type: ClusterIP
