manifests/proxy/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: homeassistant
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
    - hosts:
        - home.vakaf.space
      secretName: ha-tls
  rules:
    - host: home.vakaf.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
